5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4131/executions/1709_3032.log
== TEST (2019-05-02 10:26:04) 
-- CODE:
from math import*
x = float(input("x:"))
if(x<=0)
-- ERROR:
File "XXXX", line 3
    if(x<=0)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:26:12) 
-- CODE:
from math import*
x = float(input("x:"))
if(x=<0)
-- ERROR:
File "XXXX", line 3
    if(x=<0)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:29:12) 
-- CODE:
from math import*
x = float(input("x:"))
if(x<=0):
	print(0)
elif(0<x<=1):
	print(1)
elif(1<x<=2):
	print(x**(1/2))
elif(x>2):
	print(x**1/3)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:29:22) 
-- CODE:
from math import*
x = float(input("x:"))
if(x<=0):
	print(0)
elif(0<x<=1):
	print(1)
elif(1<x<=2):
	print(x**(1/2))
elif(x>2):
	print(x**1/3)
-- EXECUTION TIME:
0.16057
-- TEST CASE 1:
---- input:
0.57
---- correct output:
1
---- user output:
1
-- TEST CASE 2:
---- input:
1.99
---- correct output:
1.4107
---- user output:
1.4106735979665885
-- TEST CASE 3:
---- input:
2.01
---- correct output:
1.262
---- user output:
0.6699999999999999
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:29:24) 
-- CODE:
from math import*
x = float(input("x:"))
if(x<=0):
	print(0)
elif(0<x<=1):
	print(1)
elif(1<x<=2):
	print(x**(1/2))
elif(x>2):
	print(x**1/3)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:29:35) 
-- CODE:
from math import*
x = float(input("x:"))
if(x<=0):
	print(0)
elif(0<x<=1):
	print(1)
elif(1<x<=2):
	print(x**(1/2))
elif(x>2):
	print(x**1/3)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:29:44) 
-- CODE:
from math import*
x = float(input("x:"))
if(x<=0):
	print(0)
elif(0<x<=1):
	print(1)
elif(1<x<=2):
	print(x**(1/2))
elif(x>2):
	print(x**1/3)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:29:48) 
-- CODE:
from math import*
x = float(input("x:"))
if(x<=0):
	print(0)
elif(0<x<=1):
	print(1)
elif(1<x<=2):
	print(x**(1/2))
elif(x>2):
	print(x**1/3)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:31:48) 
-- CODE:
from math import*
x = float(input("x:"))
if(x<=0):
	print(round(0,4)
elif(0<x<=1):
	print(round(1,4)
elif(1<x<=2):
	print(round(x**(1/2,4)))
elif(x>2):
	print(round(x**1/3,4))
-- ERROR:
File "XXXX", line 5
    elif(0<x<=1):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:32:52) 
-- CODE:
from math import*
x = float(input("x:"))
if(x<=0):
	print(round(0 ,4)
elif(0<x<=1):
	print(round(1,4)
elif(1<x<=2):
	print(round(x**(1/2,4)))
elif(x>2):
	print(round(x**1/3,4))
-- ERROR:
File "XXXX", line 5
    elif(0<x<=1):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:33:03) 
-- CODE:
from math import*
x = float(input("x:"))
if(x<=0):
	print(round(x ,4)
elif(0<x<=1):
	print(round(1,4)
elif(1<x<=2):
	print(round(x**(1/2,4)))
elif(x>2):
	print(round(x**1/3,4))
-- ERROR:
File "XXXX", line 5
    elif(0<x<=1):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:33:31) 
-- CODE:
from math import*
x = float(input("x:"))
if(x<=0):
	print(round(0),4)
elif(0<x<=1):
	print(round(1,4)
elif(1<x<=2):
	print(round(x**(1/2,4)))
elif(x>2):
	print(round(x**1/3,4))
-- ERROR:
File "XXXX", line 7
    elif(1<x<=2):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:34:00) 
-- CODE:
from math import*
x = float(input("x:"))
if(x<=0):
	print(round(0),4)
elif(0<x<=1):
	print(round(1),4)
elif(1<x<=2):
	print(round(x**(1/2),4))
elif(x>2):
	print(round(x**1/3),4)
-- OUTPUT:
1 4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:35:12) 
-- CODE:
from math import*
x = float(input("x:"))
if(x<=0):
	print(round(0,4)
elif(0<x<=1):
	print(round(1,4)
elif(1<x<=2):
	print(round(x**(1/2,4))
elif(x>2):
	print(round(x**1/3,4)
-- ERROR:
File "XXXX", line 5
    elif(0<x<=1):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:36:05) 
-- CODE:
from math import*
x = float(input("x:"))
if(x<=0):
	print(round(0,4)
elif(0<x<=1):
	print(round(1,4)
elif(1<x<=2):
	print(round(x**(1/2,4))
elif(x>2):
	print(round(x**1/3,4)
-- ERROR:
File "XXXX", line 5
    elif(0<x<=1):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:36:51) 
-- CODE:
from math import*
x = float(input("x:"))
if(x<=0):
	print(round(0,4))
elif(0<x<=1):
	print(round(1,4))
elif(1<x<=2):
	print(round(x**(1/2,4))
elif(x>2):
	print(round(x**1/3,4))
-- ERROR:
File "XXXX", line 9
    elif(x>2):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:37:15) 
-- CODE:
from math import*
x = float(input("x:"))
if(x<=0):
	print(round(0,4))
elif(0<x<=1):
	print(round(1,4))
elif(1<x<=2):
	print(round(x**(1/2),4))
elif(x>2):
	print(round(x**1/3,4))
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:37:32) 
-- CODE:
from math import*
x = float(input("x:"))
if(x<=0):
	print(round(0,4))
elif(0<x<=1):
	print(round(1,4))
elif(1<x<=2):
	print(round(x**(1/2),4))
elif(x>2):
	print(round(x**1/3,4))
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:37:41) 
-- CODE:
from math import*
x = float(input("x:"))
if(x<=0):
	print(round(0,4))
elif(0<x<=1):
	print(round(1,4))
elif(1<x<=2):
	print(round(x**(1/2),4))
elif(x>2):
	print(round(x**1/3,4))
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:37:48) 
-- CODE:
from math import*
x = float(input("x:"))
if(x<=0):
	print(round(0,4))
elif(0<x<=1):
	print(round(1,4))
elif(1<x<=2):
	print(round(x**(1/2),4))
elif(x>2):
	print(round(x**1/3,4))
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:39:26) 
-- CODE:
from math import*
x = float(input("x:"))
if(x<=0):
	print(abs(round(0,4)))
elif(0<x<=1):
	print(abs(round(1,4)))
elif(1<x<=2):
	print(round(x**(1/2),4))
elif(x>2):
	print(round(x**1/3,4))
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:39:40) 
-- CODE:
from math import*
x = float(input("x:"))
if(x<=0):
	print(abs(round(0,4)))
elif(0<x<=1):
	print(abs(round(1,4)))
elif(1<x<=2):
	print(round(x**(1/2),4))
elif(x>2):
	print(round(x**1/3,4))
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:39:46) 
-- CODE:
from math import*
x = float(input("x:"))
if(x<=0):
	print(abs(round(0,4)))
elif(0<x<=1):
	print(abs(round(1,4)))
elif(1<x<=2):
	print(round(x**(1/2),4))
elif(x>2):
	print(round(x**1/3,4))
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:42:29) 
-- CODE:
from math import*
x = float(input("x:"))
if(x<=0):
	print(abs(round(0,4)))
elif(0<x<=1):
	print(abs(round(1,4)))
elif(1<x<=2):
	print(abs(round(x**(1/2),4)))
elif(x>2):
	print(abs(round(x**(1/3),4)))
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:42:36) 
-- CODE:
from math import*
x = float(input("x:"))
if(x<=0):
	print(abs(round(0,4)))
elif(0<x<=1):
	print(abs(round(1,4)))
elif(1<x<=2):
	print(abs(round(x**(1/2),4)))
elif(x>2):
	print(abs(round(x**(1/3),4)))
-- EXECUTION TIME:
0.167925
-- TEST CASE 1:
---- input:
0.57
---- correct output:
1
---- user output:
1
-- TEST CASE 2:
---- input:
1.99
---- correct output:
1.4107
---- user output:
1.4107
-- TEST CASE 3:
---- input:
2.01
---- correct output:
1.262
---- user output:
1.262
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
